fixing author spacing

--- a/_sass/author-info.scss
+++ b/_sass/author-info.scss
@@ -55,14 +55,14 @@
     width: 580px;
     max-width: 100%;
     line-height: 36px;
-	padding: 0;
+	padding-top: 0;
 }
 
-.author-container .author-info-image:nth-of-type(n+2){
+.author-info-image:nth-of-type(n+2){
 	padding: 40px 20px 20px 20px;
 }
 
-.author-container .author-info-description:nth-of-type(n+2){
+.author-info-description:nth-of-type(n+2){
 	padding-top: 40px;
 }
 	
